# cppapi

./: .gitignore  COPYING  cppprog.cpp  cprog.c  foo-internal.h  foo.h  foo.hh  fooimpl.cpp  meson.build  readme.md
